--- a/application/views/scripts/document/page/fragment.phtml
+++ b/application/views/scripts/document/page/fragment.phtml
@@ -1,5 +1,5 @@
 <?php $this->headTitle($this->title); ?>
-<h3><?php echo $this->subtitle; ?> <small>Fragment</small></h3>
+<h3><?php echo vprintf($this->translate($this->subtitle[0]), $this->subtitle[1]); ?> <small><?php echo $this->translate("Fragment"); ?></small></h3>
 
 <p class="pagination-right switch-two-columns">
   <a href="/document_page/show/id/<?php echo $this->page->getId(); ?>" class="btn"><i class="icon-ok-circle"></i>Hide to two column view for fragment creation</a>
