--- a/application/views/scripts/simtext/list-reports.phtml
+++ b/application/views/scripts/simtext/list-reports.phtml
@@ -1,13 +1,10 @@
-<?php
-$this->title = $this->translate("List of simtext reports");
-$this->headTitle($this->title);
-?>
 <table cellpadding="0" cellspacing="0" class="default"> 
   <thead>
     <tr>
-      <th style="width: 250px;"><?php echo $this->translate("Title"); ?></th>
-      <th><?php echo $this->translate("State"); ?></th>
-    </tr>
+      <th><?php echo $this->translate("Title"); ?></th>
+      <th class="state-column"><?php echo $this->translate("State"); ?></th>
+      <th class="fit-content"><?php echo $this->translate("Actions"); ?></th>
+   </tr>
   </thead>
   <tbody>
     <?php if(count($this->paginator)): ?>
@@ -19,11 +16,12 @@ $this->headTitle($this->title);
             <td data-label="<?php echo $this->translate("Title"); ?>"><?php echo $report->getTitle(); ?></td>
           <?php } ?>
           <td data-label="<?php echo $this->translate("State"); ?>"><?php echo $report->outputState; ?></td>
+          <td data-label="<?php echo $this->translate("Actions"); ?>"><?php echo $this->partial('partials/action-dropdown.phtml', array('actions'=>$report->actions)); ?></td>
         </tr>
       <?php endforeach; ?>
     <?php else: ?>
       <tr>
-        <td colspan="4" class="no-label"><?php echo $this->translate("No reports found."); ?></td>
+        <td colspan="3" class="no-label"><?php echo $this->translate("No reports found."); ?></td>
       </tr>
     <?php endif; ?>
   </tbody>
