--- a/application/views/scripts/document/page/stopwords.phtml
+++ b/application/views/scripts/document/page/stopwords.phtml
@@ -1,5 +1,5 @@
 <?php $this->headTitle($this->title); ?>
-<h3><?php echo vprintf($this->translate($this->subtitle[0]), $this->subtitle[1]); ?> <small><?php echo $this->translate("Stopwords highlighting"); ?></small></h3>
+<h3><?php echo vsprintf($this->translate($this->subtitle[0]), $this->subtitle[1]); ?> <small><?php echo $this->translate("Stopwords highlighting"); ?></small></h3>
 
 <div class="document-page src-wrapper"><?php echo $this->stopWordContent; ?></div>
 
