--- a/application/views/scripts/document/page/show.phtml
+++ b/application/views/scripts/document/page/show.phtml
@@ -1,4 +1,4 @@
-<h3><?php echo vprintf($this->translate($this->subtitle[0]), $this->subtitle[1]); ?> <small><?php echo $this->translate("Show"); ?></small></h3>
+<h3><?php echo vsprintf($this->translate($this->subtitle[0]), $this->subtitle[1]); ?> <small><?php echo $this->translate("Show"); ?></small></h3>
 
 <?php if($this->case->getTarget() && $this->page->getDocument()->getId() == $this->case->getTarget()->getId()): ?>
 <p class="pagination-right switch-two-columns">
