--- a/data/sass/project/styles.scss
+++ b/data/sass/project/styles.scss
@@ -29,6 +29,7 @@
 // the required images are in /public/style/images so the realtive paths should 
 // still work
 @import '../vendor/jquery-ui-1.8.17.custom.css.scss';
+@import '../vendor/chosen.css.scss';
 
 /* 
  * The following files contain the modularized parts of the application styles. 
