--- a/application/layouts/scripts/partials/header.phtml
+++ b/application/layouts/scripts/partials/header.phtml
@@ -24,7 +24,10 @@
       <div class="content clearfix">
         <?php if(Zend_Auth::getInstance()->hasIdentity() && $this->me && $this->me->getUsername() !== 'guest'): ?>
           <div class="user-box">
-            <img class="avatar" src="<?php echo Unplagged_Helper::getAvatarPath($this->me); ?>" />
+            <div class="avatar-box">
+              <img class="avatar" src="<?php echo Unplagged_Helper::getAvatarPath($this->me); ?>" />
+              <a href="<?php echo $this->baseUrl('user/edit'); ?>" class="edit-link">Edit</a>
+            </div>
             <div class="dropdown-button hoverable user-menu">
               <a class="button" href="<?php echo $this->baseUrl('user/edit'); ?>"><?php echo $this->me->getUsername(); ?><span class="arrow-down"></span></a>
               <ul>
