Added alert to Installer and changed js

--- a/data/sass/project/install.scss
+++ b/data/sass/project/install.scss
@@ -60,12 +60,6 @@ legend {
   margin: auto;
 }
 
-
-.nav-pills {
-  
-  margin-bottom: 0;
-  }
-
 .wizard-steps a {
     min-width: 15%;
     padding: 10px 12px 10px;
@@ -110,6 +104,7 @@ legend {
     -webkit-border-radius: 0 4px 4px 0;
        -moz-border-radius: 0 4px 4px 0;
             border-radius: 0 4px 4px 0;
+    width: 18.5%;
 }
 .wizard-steps .badge {
     margin: 0 5px 0 18px;
