--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -16,7 +16,9 @@ $cases = $query->getArrayResult();
   <!--<div class="breadcrumbs">
   <?php //echo $this->navigation()->breadcrumbs(); ?>
   </div>-->
+  <?php if(!empty($this->title)): ?>
   <h2><?php echo $this->escape($this->title); ?></h2>
+  <?php endif; ?>
   <div class="main">
     <div id="main-wrapper">
       <div>
