--- a/application/layouts/scripts/partials/header.phtml
+++ b/application/layouts/scripts/partials/header.phtml
@@ -4,16 +4,13 @@
 <!--[if IE 9]> <html class="no-js ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
   <head>
-    <?php echo $this->headMeta(); ?>
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
     <!-- Design based on http://www.premiumpixels.com/ -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <?php echo $this->headTitle(); ?>
-    <?php
-    echo $this->headLink()
-        ->appendStylesheet($this->baseUrl('style/styles.css'));
-    ?>
-    <!-- Modernizr needs to stay in the head to work properly -->
+    <?php echo $this->headLink()->appendStylesheet($this->baseUrl('style/styles.css')); ?>
+    <!-- Modernizr needs to stay in the head to work properly, every other scripts should go in the bottom. -->
     <script src="<?php echo $this->baseUrl('js/libs/modernizr-2.5.3.min.js'); ?>"></script>
   </head>
   <body>
@@ -28,12 +25,13 @@
               <img class="avatar" src="<?php echo Unplagged_Helper::getAvatarPath($this->me); ?>" />
               <a href="<?php echo $this->baseUrl('user/edit'); ?>" class="edit-link"><i class="icon-pencil icon-white"></i></a>
             </div>
-            <div class="dropdown-button hoverable user-menu">
-              <a class="button" href="<?php echo $this->baseUrl('user/edit'); ?>"><i class="icon-user icon-white"></i> <?php echo $this->me->getUsername(); ?><span class="arrow-down"></span></a>
-              <ul>
+            <div class="btn-group user-menu">
+              <a class="btn btn-small dropdown-toggle" data-toggle="dropdown" href="<?php echo $this->baseUrl('user/edit'); ?>"><i class="icon-user"></i><?php echo $this->me->getUsername(); ?> <span class="caret"></span></a>
+              <ul cLass="dropdown-menu">
                 <li><a href="<?php echo $this->baseUrl('auth/logout'); ?>"><?php echo $this->translate("Logout"); ?></a></li>
                 <li><a href="<?php echo $this->baseUrl('user/edit'); ?>"><?php echo $this->translate("Edit Profile"); ?></a></li>
-                <!-- <li><a href="<?php echo $this->baseUrl('user/settings'); ?>"><?php echo $this->translate("Settings"); ?></a></li>-->
+                <li><a href="<?php echo $this->baseUrl('user/files'); ?>"><?php echo $this->translate("My Files"); ?></a></li>
+                <li><a href="<?php //echo $this->baseUrl('user/settings'); ?>"><?php echo $this->translate("My Settings"); ?></a></li>
               </ul>
             </div>
           </div>
