--- a/data/sass/project/_main.scss
+++ b/data/sass/project/_main.scss
@@ -1115,7 +1115,7 @@ dl.zend_form dd dt {
   background-image: url(/images/icons/comments.png);
 }
 
-.icon-user {
+.icon-user-own {
   background-image: url(/images/icons/user.png);
 }
 
@@ -2000,4 +2000,9 @@ td .btn-group {
 #fieldset-bibTexGroup label {
   float: left;
   width: 125px;
+}
+
+.mouse-icon {
+  position: absolute;
+  z-index: 1000000;
 }
